[package]
name = "vgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boa_engine = "0.18.0"
boa_runtime = "0.18.0"
color-eyre = "0.6.3"
eframe = { version = "0.27.2", features = ["wgpu"] }
eyre = "0.6.12"
